fix URL validation